fix: consolidate jvm test settings
Signed-off-by: Sam Gammon <sam@elide.dev>